--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,24 @@
+@import 'normalize';
+@import 'lightgallery.min';
+@import 'lg-transitions.min';
+    
+    
 /********************
 YOUR STYLES
 *******************/
 
-
+body {
+    background: green;
+}
+    
+    
+figure {
+    background: pink;
+    width: 50%;
+}
+figure figcaption {
+    font-style: italic;
+}
 
 
 /********************
